--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <a href="#" onclick="hideFeedbackContainer()" id="close-button">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black"><path d="M0 0h24v24H0z" fill="none"/><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>
     </a>
+    <p>اگر جواب ايسلایوْرسېݩېز ایمیل آدرسیݩیز یا بولسا تلفن نمبریݩیزی یازېݩ.</p>
     <form>
       <textarea id="messageContent"></textarea>
       <div>
@@ -29,8 +30,9 @@
   </div>
 </div>
 
-<div class="button-container">
+<p>بۉ لۉقانې افغان ترکمنلر اۆچین ترجماسيدیر. بیزیݩ مقصدېمېز اوْقۉماغی آݩقسات و اصل متنیݩ دوْغرې معناسېنې بریوْن ترجمه اتمکدیر. یاݩلېشلېق تاپساݩېز و یا دۆشينمیوْن بیر زادېݩېز بار بولسا بیزه خبر بريݩ تا بیز اوْنې دۆزالتلیݩ. آشاقداقې فۉرم بیلان بیزلره ايميل ایباريب بیلارسيݩي.</p>
 
+<div class="button-container">
   <a href="#" onclick="displayFeedbackScreen()">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 12h-2v-2h2v2zm0-4h-2V6h2v4z"/></svg>
   </a>
@@ -40,7 +42,8 @@
   </a>
 
 </div>
-    
+
+
 <div class="book-container">
 
   <html>
@@ -545,18 +548,13 @@
 
 </div>
 
-<!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-app.js"></script>
 
 
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-firestore.js"></script>
-<!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
 <script src="https://www.gstatic.com/firebasejs/8.2.9/firebase-analytics.js"></script>
 
 <script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
   var firebaseConfig = {
     apiKey: "AIzaSyAM3H_pYXHLo1o4nwrToOJyA_v0cgWt6Ug",
     authDomain: "turkmen-injil-f679c.firebaseapp.com",
